--- a/src/index.css
+++ b/src/index.css
@@ -17,9 +17,9 @@ html {
 }
 
 body {
-	background: linear-gradient(-45deg, #000000be, #2e0124, #640223, #000000a1);
+	background: linear-gradient(-45deg, #000000d2, #29012e, #460872, #000000c5);
 	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
+	animation: gradient 30s ease infinite;
 	height: 100vh;
 }
 
@@ -35,4 +35,14 @@ body {
 	100% {
 		background-position: 0% 50%;
 	}
+}
+
+footer{
+  margin-top: 1rem;
+  padding: 1rem;
+  background-color: linear-gradient(45deg, #000000d2, #29012e, #460872, #000000c5);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
