--- a/src/index.css
+++ b/src/index.css
@@ -43,10 +43,10 @@ footer{
   margin-top: 1rem;
   padding: 1rem;
   background-color: linear-gradient(45deg, #000000d2, #29012e, #460872, #000000c5);
-  position: fixed;
+  /* position: sticky; */
   bottom: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
 }
 
 .carouselImg{
@@ -55,4 +55,45 @@ footer{
 
 .carousel {
 	position: relative;
+}
+
+.landingdiv {
+	width: 80vw;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+.avatarimg {
+	height: 30vh;
+}
+.aboutdiv {
+	width: 100vw;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.footerdiv {
+	width: 100vw;
+	height: 10vh;
+	display: flex;
+	flex-direction: row;
+	gap: 10px;
+	align-items: center;
+}
+
+.headerdiv {
+	max-width: 100vw;
+	height: 10vh;
+	display: flex;
+	flex-direction: row;
+}
+
+.headertitle {
+	font-size: 0vw;
+}
+
+.headerlink {
+	font-size: 5vw;
+
 }
